--- a/templates/webview_tests_submit.html
+++ b/templates/webview_tests_submit.html
@@ -1,3 +1,6 @@
+<head>
+    <meta http-equiv="Content-Security-Policy">
+</head>
 {% if success %}
 <iframe src="https://noip.belledu.com/#/historyTestResult?problemId={{ problemId }}&businessType=4"></iframe>
 <style>
